--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^16.1.1",
     "react-icons": "^2.2.7",
     "react-scripts": "1.0.17",
-    "reactstrap": "^5.0.0-alpha.3"
+    "reactstrap": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
